guestbook/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guest-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: guest.fb-uat.odd.works
    http:  
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: guestbook-ui
            port:
              number: 80
